welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:35: error: '<-' expected but ')' found.
  for (i<1 to 6){
               ^PictureMono2:38: error: illegal start of simple expression
} 
^